<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/curved_rectange">

        <EditText
            style="@style/DialogEdit"
            android:layout_marginTop="7dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/editUsername"
            android:ems="10"
            android:hint="@string/username" />

        <EditText
            style="@style/DialogEdit"
            android:id="@+id/editName"
            android:ems="10"
            android:hint="@string/name" />

        <EditText
            style="@style/DialogEdit"
            android:id="@+id/editdob"
            android:ems="10"
            android:hint="@string/dob" />

        <EditText
            style="@style/DialogEdit"
            android:id="@+id/editphone"
            android:ems="10"
            android:hint="@string/phone_num" />

        <EditText
            style="@style/DialogEdit"
            android:id="@+id/editemail"
            android:ems="10"
            android:hint="@string/email" />

        <EditText
            style="@style/DialogEdit"
            android:id="@+id/editaddress"
            android:ems="10"
            android:hint="@string/address" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
            <Button
                android:id="@+id/saveButton"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Save"/>
            <!--<Button-->
                <!--android:id="@+id/moreButton"-->
                <!--android:layout_marginLeft="20dp"-->
                <!--android:layout_gravity="center_horizontal"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="More..."/>-->

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>