<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.membershipsystem.fragments.MyInfoFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/hello_blank_fragment"
            android:gravity="center_horizontal"
            android:background="@color/Yellow"/>
        <LinearLayout
            style="@style/LinearL">

            <TextView
                style="@style/TextV"
                android:text="@string/username_"/>
            <TextView
                android:id="@+id/savedUsername"
                style="@style/EditV"
                android:text="myUsername"/>
        </LinearLayout>
        <LinearLayout
            style="@style/LinearL">

            <TextView
                style="@style/TextV"
                android:text="@string/name_"/>
            <TextView
                android:id="@+id/savedName"
                style="@style/EditV"
                android:text="myName"/>
        </LinearLayout>
        <LinearLayout
            style="@style/LinearL">

            <TextView
                style="@style/TextV"
                android:text="@string/dob_"/>
            <TextView
                android:id="@+id/savedDob"
                style="@style/EditV"
                android:text="myDOB"/>
        </LinearLayout>
        <LinearLayout
            style="@style/LinearL">

            <TextView
                style="@style/TextV"
                android:text="@string/phone_num_"/>
            <TextView
                android:id="@+id/savedNum"
                style="@style/EditV"
                android:text="my#"/>
        </LinearLayout>
        <LinearLayout
            style="@style/LinearL">

            <TextView
                style="@style/TextV"
                android:text="@string/email_"/>
            <TextView
                android:id="@+id/savedEmail"
                style="@style/EditV"
                android:text="myEmail"/>
        </LinearLayout>
        <LinearLayout
            style="@style/LinearL">

            <TextView
                style="@style/TextV"
                android:text="@string/address_"/>
            <TextView
                android:id="@+id/savedAddress"
                style="@style/EditV"
                android:text="myaddress\nanother"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            />
        <LinearLayout
            style="@style/LinearL"
            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/edit_button"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:text="Edit"/>
            <Button
                android:id="@+id/delete_button"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:text="Delete"/>

        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
